Adding Cats & Prods & Banners Images

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -629,9 +629,9 @@
   "ResetPassword": "Reset Password",
   "UpdatePassword": "Update Password",
   "CreateNewPassword": "Create New Password",
-  "Welcome to Labina's Dashboard!": "Welcome to Labina's Dashboard!",
+  "Welcome to Labina Dashboard!": "Welcome to Labina Dashboard!",
   "Total after discount": "Total after discount",
   "Net Total": "Net Total",
   "New!": "New!",
-  "EGP": "EGP"
+  "€": "€"
 }
