--- a/public/locales/it/common.json
+++ b/public/locales/it/common.json
@@ -635,10 +635,10 @@
     "ResetPassword": "Reset Password",
     "UpdatePassword": "Update Password",
     "CreateNewPassword": "Create New Password",
-    "Welcome to Labina's Dashboard!": "Welcome to Labina's Dashboard!",
+    "Welcome to Labina Dashboard!": "Welcome to Labina Dashboard!",
     "Total after discount": "Total after discount",
     "Net Total": "Net Total",
     "New!": "New!",
-    "EGP": "EGP"
+    "€": "€"
   }
   
